<resources>
    <string name="app_name" translatable="false">GeeksGuide</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_maps">Location - Find US</string>
    <string name="title_activity_list">Places of interest</string>
    <string name="title_activity_about">About Us</string>

    <!-- LOGIN  / CREATE ACCOUNT-->
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtLogin">Login</string>
    <string name="txtName">Name</string>
    <string name="txtCreateAccount">Create Account</string>
    <string name="logging">logging in...</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--ABOUT-->
    <string name="shareContent">Share our APP!</string>
    <string name="ContactUS">Contact Us</string>
    <string name="support">Support APP</string>
    <string name="addressAbout">Address</string>
    <string name="versionAPP">Version 1.0</string>

    <!--LIST-->
    <string name="createNewLocal">Create new Local</string>
    <string name="addNewLocal">Add new Local</string>
    <string name="msgDialog">Are you sure you want to quit?</string>
    <string name="place">Place Name</string>
    <string name="address">Address</string>
    <string name="operation">Operation Hour</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="editPlace">Edit Place</string>
    <string name="cancel">Cancel</string>


    <!--SHARE CONTENT-->
    <string name="shareAPPTitle">Share GeeksGuide</string>
    <string name="msgShareContent">Get to know our APP. Geeks Guide - Available on Google Play</string>


    <!--BOTTOM NAVTIGATION-->
    <string name="title_share">Share APP</string>
    <string name="title_about">About Us</string>
    <string name="title_logout">Logout</string>

    <!--KEYS-->
    <string name="google_maps_key" translatable="false">AIzaSyDaZot7IZvHCsFNwrCGPDwfkkEPwB-RL-o</string>
    <string name="editPlaces">Edit Place</string>


</resources>
