<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/tvLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textColor="#494949"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:text="@string/place" />

    <TextView
        android:id="@+id/tvEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#707070"
        android:textSize="14sp"
        tools:text="@string/address" />

    <TextView
        android:id="@+id/tvHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#707070"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        tools:text="@string/operation" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#f2f2f2" />




</LinearLayout>